// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback error message 1`] = `
.c7 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  border: 2px solid;
  border-radius: 8px;
  margin-top: 8px;
  margin-bottom: 24px;
  border-color: #FF6257;
}

.c4 a {
  color: #FFFFFF;
}

.c5 {
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
}

.c6 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding: 32px;
  width: 540px;
  color: #FFFFFF;
  background-color: #344179;
}

.c8 {
  box-sizing: border-box;
  flex: 1;
}

.c2 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c0 {
  display: block;
  outline: none;
  margin-top: 48px;
  margin-bottom: 48px;
  margin-left: auto;
  margin-right: auto;
  max-width: 200px;
  max-height: 120px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 16px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.08px;
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: center;
}

p+.c11 {
  margin-top: 16px;
}

.c13 {
  color: #009EFF;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1 c2"
    color="text.main"
    width="540px"
  >
    <h1
      class="c3"
    >
      Login Unsuccessful
    </h1>
    <div
      class="c4"
      kind="danger"
    >
      <div
        class="c5"
        kind="danger"
      >
        <div
          class="c6"
          kind="danger"
        >
          <span
            class="c7 icon icon-warning"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
              />
              <path
                d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
              />
              <path
                clip-rule="evenodd"
                d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            custom message
          </div>
        </div>
      </div>
    </div>
     
    <p
      class="c10 c11 sc-fPXMhL c12"
    >
      <a
        class="c13"
        href="/web/login"
      >
        Please attempt to log in again.
      </a>
    </p>
  </div>
</div>
`;

exports[`default error message 1`] = `
.c7 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  border: 2px solid;
  border-radius: 8px;
  margin-top: 8px;
  margin-bottom: 24px;
  border-color: #FF6257;
}

.c4 a {
  color: #FFFFFF;
}

.c5 {
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
}

.c6 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding: 32px;
  width: 540px;
  color: #FFFFFF;
  background-color: #344179;
}

.c8 {
  box-sizing: border-box;
  flex: 1;
}

.c2 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c0 {
  display: block;
  outline: none;
  margin-top: 48px;
  margin-bottom: 48px;
  margin-left: auto;
  margin-right: auto;
  max-width: 200px;
  max-height: 120px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 16px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.08px;
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: center;
}

p+.c11 {
  margin-top: 16px;
}

.c13 {
  color: #009EFF;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1 c2"
    color="text.main"
    width="540px"
  >
    <h1
      class="c3"
    >
      Login Unsuccessful
    </h1>
    <div
      class="c4"
      kind="danger"
    >
      <div
        class="c5"
        kind="danger"
      >
        <div
          class="c6"
          kind="danger"
        >
          <span
            class="c7 icon icon-warning"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
              />
              <path
                d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
              />
              <path
                clip-rule="evenodd"
                d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            unable to login, please check Teleport's log for details
          </div>
        </div>
      </div>
    </div>
     
    <p
      class="c10 c11 sc-fPXMhL c12"
    >
      <a
        class="c13"
        href="/web/login"
      >
        Please attempt to log in again.
      </a>
    </p>
  </div>
</div>
`;
